--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,7 +9,7 @@
         android:id="@+id/edit_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="name"
+        android:hint="@string/name"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:hint="login"
+        android:hint="@string/login"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="password"
+        android:hint="@string/password"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="repeat password"
+        android:hint="@string/repeat_password"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,8 +74,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="your gender"
-            android:textSize="18dp" />
+            android:text="@string/your_gender"
+            android:textSize="18sp" />
 
         <Spinner
             android:id="@+id/sex_spinner"
@@ -93,7 +93,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:hint="birthday"
+        android:hint="@string/birthday"
         app:layout_constraintTop_toBottomOf="@+id/sex_linear"
         />
 
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:background="#80fb90"
-        android:hint="sign up"
+        android:hint="@string/sign_up"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/birthday" />
