--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -18,6 +18,7 @@
         app:layout_constraintVertical_bias="0.111" />
 
     <EditText
+        android:inputType="textPassword"
         android:id="@+id/edit_signin_password"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
