--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -61,7 +61,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/adding_event_discription">
 
-            <EditText
+            <TextView
                 android:id="@+id/start_event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
                 android:hint="@string/start_time"
                  />
 
-            <EditText
+            <TextView
                 android:id="@+id/end_event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
