--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -35,6 +35,7 @@
 
     <ImageView
         android:id="@+id/aut_logo"
+        android:src="@drawable/logo"
         android:layout_width="268dp"
         android:layout_height="126dp"
         android:layout_marginBottom="16dp"
