--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -3,14 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_marginLeft="3dp"
+    android:layout_marginRight="4dp"
     android:layout_marginTop="1dp"
     android:layout_marginBottom="1dp"
+    android:id="@+id/card_tag"
     >
     <TextView android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/item_text"
         android:textSize="26dp"
-        android:textColor="@color/colorAccent"
+        android:layout_marginRight="3dp"
+        android:layout_marginLeft="3dp"
+
         />
 </android.support.v7.widget.CardView>
