--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,8 +18,8 @@
             android:title="Иду" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings"
-            android:title="Настройки" />
+            android:icon="@drawable/ic_logout"
+            android:title="Выйти" />
     </group>
 
 
