--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -43,7 +43,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_user_login" />
+        app:layout_constraintTop_toBottomOf="@id/edit_user_login"
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/edit_repeat_password"
@@ -56,7 +57,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_user_password" />
+        app:layout_constraintTop_toBottomOf="@id/edit_user_password"
+        android:inputType="textPassword" />
 
     <LinearLayout
         android:id="@+id/sex_linear"
@@ -90,11 +92,11 @@
         android:id="@+id/birthday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
-        android:text="birthday"
-        android:textSize="18dp"
+        android:text="@string/signup_birthday"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sex_linear" />
